# sam45

./: CITATION.cff  README.md  genindex.html  index.html  pyproject.toml
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle
.github/workflows/: tests.yaml
1.0.0/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
1.0.0/.doctrees/: environment.pickle  index.doctree
1.0.0/_apidoc/: sam45.dtypes.html  sam45.html  sam45.read.html
1.0.0/_modules/: index.html
1.0.0/_modules/sam45/: read.html
1.0.0/_sources/_apidoc/: sam45.rst.txt
1.0.0rc1/: .buildinfo  py-modindex.html  search.html  searchindex.js
1.0.0rc1/.doctrees/: environment.pickle  index.doctree
1.0.0rc1/.doctrees/_apidoc/: sam45.dtypes.doctree
1.0.0rc1/_apidoc/: sam45.dtypes.html  sam45.html
1.0.0rc1/_sources/_apidoc/: sam45.dtypes.rst.txt  sam45.read.rst.txt
1.0.0rc2/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html
1.0.0rc2/.doctrees/: environment.pickle
1.0.0rc2/_apidoc/: sam45.dtypes.html  sam45.html  sam45.read.html
1.0.0rc2/_modules/: index.html
1.0.0rc2/_modules/sam45/: read.html
1.0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.0.1/.doctrees/: environment.pickle  index.doctree
1.0.1/.doctrees/_apidoc/: sam45.doctree  sam45.dtypes.doctree  sam45.read.doctree
1.0.1/_apidoc/: sam45.dtypes.html  sam45.html  sam45.read.html
1.0.1/_modules/: index.html
_apidoc/: sam45.read.html
_modules/: index.html
_modules/sam45/: read.html
sam45/: __init__.py  dtypes.py  read.py
(+1 files in other folders)
