[project]
name = "sam45"
version = "1.0.0rc1"
description = "NRO/SAM45 log data reader"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=2,<3",
    "tomli>=2,<3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "taniguchi.akio@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
repository = "https://github.com/astropenguin/sam45"

[dependency-groups]
dev = [
    "black>=25,<26",
    "ipython>=8,<10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
